--- a/Banka/Banka.csproj
+++ b/Banka/Banka.csproj
@@ -57,6 +57,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Sporici.cs" />
+    <Compile Include="Studentsky.cs" />
+    <Compile Include="Uverovy.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
