--- a/Banka/Banka.csproj
+++ b/Banka/Banka.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RegWin.xaml.cs">
+      <DependentUpon>RegWin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Sporici.cs" />
     <Compile Include="Studentsky.cs" />
     <Compile Include="Uverovy.cs" />
@@ -71,6 +74,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RegWin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
